syntax = "proto3";

package publish.service.v1;

option go_package = "api/publish/service/v1;v1";
import "api/entity/v1/entity.proto";

service Publish {
	rpc GetPublishList(PublishListRequest) returns (PublishListReply) {}
	rpc PublishAction(PublishActionRequest) returns (PublishActionReplay) {}
}

message PublishActionRequest {
	string token = 1; // 用户鉴权token
	bytes data = 2; // 视频数据
	string title = 3; // 视频标题
}

message PublishActionReplay {
	int32 status_code = 1; // 状态码，0-成功，其他值-失败
	string status_msg = 2; // 返回状态描述
}

message PublishListRequest {
	int64 user_id = 1; // 用户id
	string token = 2; // 用户鉴权token
}

message PublishListReply {
	int32 status_code = 1; // 状态码，0-成功，其他值-失败
	string status_msg = 2; // 返回状态描述
	entity.v1.Video video_list = 3; // 用户发布的视频列表
}